tests/golden/defaults/cloudscale-loadbalancer-controller/cloudscale-loadbalancer-controller/10_kustomize/cloudscale_loadbalancer_controller/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_cloudscale-loadbalancer-controller-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: appuio-cloudscale-loadbalancer-controller/cloudscale-loadbalancer-controller-serving-cert
  name: cloudscale-loadbalancer-controller-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cloudscale-loadbalancer-controller-webhook-service
      namespace: appuio-cloudscale-loadbalancer-controller
      path: /validate-cloudscale-appuio-io-v1beta1-loadbalancer
  failurePolicy: Fail
  name: validate-cloudscale-v1beta1-loadbalancer.appuio.io
  rules:
  - apiGroups:
    - cloudscale.appuio.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - loadbalancers
  sideEffects: None
