tests/golden/defaults/cloudscale-loadbalancer-controller/cloudscale-loadbalancer-controller/10_kustomize/cloudscale_loadbalancer_controller/rbac.authorization.k8s.io_v1_clusterrole_cloudscale-loadbalancer-controller-manager-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: cloudscale-loadbalancer-controller-manager-role
rules:
- apiGroups:
  - ""
  resources:
  - events
  verbs:
  - create
  - patch
- apiGroups:
  - ""
  resources:
  - nodes
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - cloudscale.appuio.io
  resources:
  - loadbalancers
  verbs:
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - cloudscale.appuio.io
  resources:
  - loadbalancers/finalizers
  verbs:
  - update
- apiGroups:
  - cloudscale.appuio.io
  resources:
  - loadbalancers/status
  verbs:
  - get
  - patch
  - update
