tests/golden/defaults/cloudscale-loadbalancer-controller/cloudscale-loadbalancer-controller/10_kustomize/cloudscale_loadbalancer_controller/rbac.authorization.k8s.io_v1_clusterrole_cloudscale-loadbalancer-controller-metrics-auth-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: cloudscale-loadbalancer-controller-metrics-auth-role
rules:
- apiGroups:
  - authentication.k8s.io
  resources:
  - tokenreviews
  verbs:
  - create
- apiGroups:
  - authorization.k8s.io
  resources:
  - subjectaccessreviews
  verbs:
  - create
