tests/golden/defaults/cloudscale-loadbalancer-controller/cloudscale-loadbalancer-controller/10_kustomize/cloudscale_loadbalancer_controller/rbac.authorization.k8s.io_v1_clusterrole_cloudscale-loadbalancer-controller-metrics-reader.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: cloudscale-loadbalancer-controller-metrics-reader
rules:
- nonResourceURLs:
  - /metrics
  verbs:
  - get
