tests/golden/defaults/cloudscale-loadbalancer-controller/cloudscale-loadbalancer-controller/10_kustomize/cloudscale_loadbalancer_controller/rbac.authorization.k8s.io_v1_clusterrole_cloudscale-loadbalancer-viewer-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: rbac
    app.kubernetes.io/created-by: cloudscale-loadbalancer-controller
    app.kubernetes.io/instance: cloudscale-loadbalancer-viewer-role
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: clusterrole
    app.kubernetes.io/part-of: cloudscale-loadbalancer-controller
    rbac.authorization.k8s.io/aggregate-to-cluster-reader: "true"
  name: cloudscale-loadbalancer-viewer-role
rules:
- apiGroups:
  - cloudscale.appuio.io
  resources:
  - loadbalancers
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - cloudscale.appuio.io
  resources:
  - loadbalancers/status
  verbs:
  - get
