tests/golden/defaults/cloudscale-loadbalancer-controller/cloudscale-loadbalancer-controller/10_kustomize/cloudscale_loadbalancer_controller/rbac.authorization.k8s.io_v1_clusterrolebinding_cloudscale-loadbalancer-controller-manager-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/component: rbac
    app.kubernetes.io/created-by: cloudscale-loadbalancer-controller
    app.kubernetes.io/instance: manager-rolebinding
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: clusterrolebinding
    app.kubernetes.io/part-of: cloudscale-loadbalancer-controller
  name: cloudscale-loadbalancer-controller-manager-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cloudscale-loadbalancer-controller-manager-role
subjects:
- kind: ServiceAccount
  name: cloudscale-loadbalancer-controller-controller-manager
  namespace: appuio-cloudscale-loadbalancer-controller
