tests/golden/defaults/cloudscale-loadbalancer-controller/cloudscale-loadbalancer-controller/10_kustomize/cloudscale_loadbalancer_controller/rbac.authorization.k8s.io_v1_clusterrolebinding_cloudscale-loadbalancer-controller-metrics-auth-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: cloudscale-loadbalancer-controller-metrics-auth-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cloudscale-loadbalancer-controller-metrics-auth-role
subjects:
- kind: ServiceAccount
  name: cloudscale-loadbalancer-controller-controller-manager
  namespace: appuio-cloudscale-loadbalancer-controller
