tests/golden/defaults/cloudscale-loadbalancer-controller/cloudscale-loadbalancer-controller/10_kustomize/cloudscale_loadbalancer_controller/rbac.authorization.k8s.io_v1_rolebinding_cloudscale-loadbalancer-controller-leader-election-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/component: rbac
    app.kubernetes.io/created-by: cloudscale-loadbalancer-controller
    app.kubernetes.io/instance: leader-election-rolebinding
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rolebinding
    app.kubernetes.io/part-of: cloudscale-loadbalancer-controller
  name: cloudscale-loadbalancer-controller-leader-election-rolebinding
  namespace: appuio-cloudscale-loadbalancer-controller
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: cloudscale-loadbalancer-controller-leader-election-role
subjects:
- kind: ServiceAccount
  name: cloudscale-loadbalancer-controller-controller-manager
  namespace: appuio-cloudscale-loadbalancer-controller
