tests/golden/defaults/cloudscale-loadbalancer-controller/cloudscale-loadbalancer-controller/10_kustomize/cloudscale_loadbalancer_controller/v1_service_cloudscale-loadbalancer-controller-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: cloudscale-loadbalancer-controller
    control-plane: controller-manager
  name: cloudscale-loadbalancer-controller-metrics-service
  namespace: appuio-cloudscale-loadbalancer-controller
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    control-plane: controller-manager
